Update presentation. Fix gap bug on Work and update 'scrolling text' with a gif

--- a/src/styles/components/work.scss
+++ b/src/styles/components/work.scss
@@ -19,13 +19,13 @@
       margin-bottom: 5rem;
 
       h1 {
-        font-size: 8rem;
+        font-size: 5rem;
         color: $blue-color;
         font-family: $font-special;
       }
 
       p {
-        font-size: 2rem;
+        font-size: 1.2rem;
         color: $light-blue-color;
       }
 
